--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "eleventy --serve --watch"
+    "start": "eleventy --serve --watch",
+    "compile": "eleventy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.11.0",
     "cli-spinner": "^0.2.10",
+    "lodash.get": "^4.4.2",
+    "mkdirp": "^1.0.4",
     "puppeteer": "^4.0.1"
+  },
+  "volta": {
+    "node": "14.5.0"
   }
 }
