--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "npm run build",
     "start": "eleventy --serve --watch",
-    "compile": "eleventy"
+    "prebuild": "del public",
+    "build": "eleventy"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +21,8 @@
   },
   "volta": {
     "node": "14.5.0"
+  },
+  "devDependencies": {
+    "del-cli": "^3.0.1"
   }
 }
