Add docs and demos pulled from Chrome Status
The quality of items here isn't great, but it's what we've got

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prestart": "npm run build",
     "start": "eleventy --serve --watch",
     "prebuild": "del public",
-    "build": "eleventy"
+    "build": "eleventy",
+    "build:dirty": "eleventy"
   },
   "author": "",
   "license": "ISC",
