--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "npm run build",
-    "start": "eleventy --serve --watch",
-    "prebuild": "del public",
-    "build": "eleventy",
-    "build:dirty": "eleventy"
+    "prestart": "run-s build:11ty",
+    "start": "snowpack dev",
+    "build": "snowpack build --clean",
+    "prebuild:11ty": "del public",
+    "build:11ty": "eleventy",
+    "watch:11ty": "eleventy --watch"
   },
   "author": "",
   "license": "ISC",
@@ -24,7 +25,11 @@
     "node": "14.5.0"
   },
   "devDependencies": {
+    "@snowpack/plugin-run-script": "^2.2.1",
+    "@snowpack/plugin-sass": "^1.2.0",
     "del-cli": "^3.0.1",
-    "markdown-it": "^12.0.2"
+    "markdown-it": "^12.0.2",
+    "npm-run-all": "^4.1.5",
+    "snowpack": "^2.18.4"
   }
 }
