--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "prestart": "run-s build:11ty",
     "start": "snowpack dev",
-    "build": "snowpack build --clean",
+    "build": "NODE_ENV=production snowpack build --clean",
     "prebuild:11ty": "del public",
     "build:11ty": "eleventy",
     "watch:11ty": "eleventy --watch"
@@ -21,12 +21,15 @@
     "fuse.js": "^6.4.3",
     "lodash.get": "^4.4.2",
     "mkdirp": "^1.0.4",
-    "puppeteer": "^4.0.1"
+    "puppeteer": "^4.0.1",
+    "workbox-recipes": "^6.0.2"
   },
   "volta": {
     "node": "14.5.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.3.4",
+    "@snowpack/plugin-optimize": "^0.2.10",
     "@snowpack/plugin-run-script": "^2.2.1",
     "@snowpack/plugin-sass": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
@@ -36,10 +39,12 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "legacy-bundle-snowpack-plugin": "^1.0.3",
     "markdown-it": "^12.0.2",
     "npm-run-all": "^4.1.5",
     "plugin-typescript": "^8.0.0",
     "prettier": "^2.2.1",
+    "rollup-plugin-workbox-inject": "^2.0.0",
     "snowpack": "^2.18.4",
     "typescript": "^4.1.3"
   }
