--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "prestart": "run-s build:11ty",
     "start": "snowpack dev",
     "build": "NODE_ENV=production snowpack build --clean",
+    "postbuild": "workbox injectManifest",
     "prebuild:11ty": "del public",
     "build:11ty": "eleventy",
-    "watch:11ty": "eleventy --watch"
+    "watch:11ty": "eleventy --watch",
+    "workbox:inject": "workbox injectManifest",
+    "prettier:lint": "prettier -c src workbox-config.js snowpack.config.js data firebase.json package.json",
+    "prettier:fix": "prettier -w src workbox-config.js snowpack.config.js data firebase.json package.json"
   },
   "author": "",
   "license": "ISC",
@@ -22,13 +26,15 @@
     "lodash.get": "^4.4.2",
     "mkdirp": "^1.0.4",
     "puppeteer": "^4.0.1",
-    "workbox-recipes": "^6.0.2"
+    "workbox-cacheable-response": "^6.0.2",
+    "workbox-recipes": "^6.0.2",
+    "workbox-routing": "^6.0.2",
+    "workbox-strategies": "^6.0.2"
   },
   "volta": {
     "node": "14.5.0"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "^2.3.4",
     "@snowpack/plugin-optimize": "^0.2.10",
     "@snowpack/plugin-run-script": "^2.2.1",
     "@snowpack/plugin-sass": "^1.2.0",
@@ -44,8 +50,8 @@
     "npm-run-all": "^4.1.5",
     "plugin-typescript": "^8.0.0",
     "prettier": "^2.2.1",
-    "rollup-plugin-workbox-inject": "^2.0.0",
     "snowpack": "^2.18.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "workbox-cli": "^6.0.2"
   }
 }
