--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "prestart": "run-s build:11ty",
     "start": "snowpack dev",
     "prebuild": "run-p *:lint",
-    "build": "NODE_ENV=production snowpack build --clean",
+    "build": "NODE_ENV=production snowpack build --clean && npm run build:11ty",
     "postbuild": "workbox injectManifest",
-    "prebuild:11ty": "del public",
     "build:11ty": "eleventy",
     "watch:11ty": "eleventy --watch",
     "workbox:inject": "workbox injectManifest",
