--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
     "trailingSlash": false,
     "redirects": [
       {
-        "source": "/",
+        "source": "/**",
         "destination": "https://issues.chromium.org/issues?q=customfield1223031:proj-fugu%20-customfield1223031:proj-fugu-efforts%20-is:obsolete",
         "type": 301
       }
